syntax = "proto3";

option go_package = "./command";
import "serverinfo.proto";
import "message.proto";

package command;

// 请求服务器连接验证
message ReqServerVerify {
	ServerInfo Info = 1;	
	repeated uint32 Carelist = 2;
	string Sign = 3;
}

// 返回服务器验证信息
message RetServerVerify {

}


// 初始化路由服务器列表
message NotifyRouteServerInit {
	repeated ServerInfo Serverlist = 1;
}

// 新增路由服务器信息
message NotifyRouteServerAdd {
	ServerInfo Info = 1;
}

// 请求网关列表
message ReqGatewayList {

}

//刷新网络服务器列表
message RetGatewayList {
	repeated ServerInfo Serverlist = 1;
}

//刷新网关服务器在线
message UpdateGatewayOnline {
	uint32 Id = 1;
	uint32 Online = 2;	
}

//路由消息给指定类型服务器
message RouteBroadcastByType{	
	Message Msg = 1;
	uint32 Type = 2;
	uint32 Srcid = 3;
}

//路由消息给指定ID服务器
message RouteBroadcastByID {
	Message Msg = 1;
	uint32 Id = 2;
	uint32 Srcid = 3;
}

