syntax = "proto3";

package command;
option go_package = "./command";
message ServerInfo {
	uint32 Id = 1;
	uint32 Index = 2;
	uint32 Type = 3;
	string Ip = 4;
	uint32 Port = 5;
}

